--- a/chants/morning-chanting.html
+++ b/chants/morning-chanting.html
@@ -83,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div id="sidebar-scrollbox" class="sidebar-scrollbox">
-                <ol class="chapter"><li class="expanded affix "><a href="../titlepage.html">Bhikkhu Manual</a></li><li class="expanded affix "><a href="../first-lines.html">List of First Lines</a></li><li class="expanded "><a href="../essential-chants.html"><strong aria-hidden="true">1.</strong> Essential Chants</a></li><li><ol class="section"><li class="expanded "><a href="../chants/morning-chanting.html" class="active"><strong aria-hidden="true">1.1.</strong> Morning Chanting</a></li><li class="expanded "><a href="../chants/evening-chanting.html"><strong aria-hidden="true">1.2.</strong> Evening Chanting</a></li><li class="expanded "><a href="../chants/reflections.html"><strong aria-hidden="true">1.3.</strong> Reflections</a></li><li class="expanded "><a href="../chants/parittas.html"><strong aria-hidden="true">1.4.</strong> Parittas</a></li><li class="expanded "><a href="../chants/anumodana.html"><strong aria-hidden="true">1.5.</strong> Anumodanā</a></li><li class="expanded "><a href="../chants/funeral-chants.html"><strong aria-hidden="true">1.6.</strong> Funeral Chants</a></li><li class="expanded "><a href="../chants/suttas.html"><strong aria-hidden="true">1.7.</strong> Suttas</a></li><li class="expanded "><a href="../chants/patimokkha-chants.html"><strong aria-hidden="true">1.8.</strong> Pāṭimokkha Chants</a></li><li class="expanded "><a href="../chants/sri-lanka.html"><strong aria-hidden="true">1.9.</strong> Chants Used in Sri Lanka</a></li></ol></li><li class="expanded "><a href="../vinaya-notes.html"><strong aria-hidden="true">2.</strong> Vinaya Notes</a></li><li><ol class="section"><li class="expanded "><a href="../vinaya/ocean-quote.html"><strong aria-hidden="true">2.1.</strong> Quote</a></li><li class="expanded "><a href="../vinaya/guidelines.html"><strong aria-hidden="true">2.2.</strong> Guidelines</a></li><li class="expanded "><a href="../vinaya/requisites.html"><strong aria-hidden="true">2.3.</strong> Requisites</a></li><li class="expanded "><a href="../vinaya/offences.html"><strong aria-hidden="true">2.4.</strong> Offences</a></li><li class="expanded "><a href="../vinaya/uposatha.html"><strong aria-hidden="true">2.5.</strong> Uposatha</a></li><li class="expanded "><a href="../vinaya/rains-and-kathina.html"><strong aria-hidden="true">2.6.</strong> Rains and Kathina</a></li><li class="expanded "><a href="../vinaya/other-procedures.html"><strong aria-hidden="true">2.7.</strong> Other Procedures</a></li><li class="expanded "><a href="../vinaya/useful-notes.html"><strong aria-hidden="true">2.8.</strong> Useful Notes</a></li></ol></li><li class="expanded "><a href="../appendix.html"><strong aria-hidden="true">3.</strong> Appendix</a></li><li><ol class="section"><li class="expanded "><a href="../pali-phonetics-and-pronunciation.html"><strong aria-hidden="true">3.1.</strong> Pāli Phonetics and Pronunciation</a></li><li class="expanded "><a href="../dhamma-quotes.html"><strong aria-hidden="true">3.2.</strong> Dhamma Quotes</a></li></ol></li><li class="expanded "><a href="../print-guide.html"><strong aria-hidden="true">4.</strong> Print Guide</a></li><li class="expanded "><a href="../copyright.html"><strong aria-hidden="true">5.</strong> Copyright</a></li></ol>
+                <ol class="chapter"><li class="expanded affix "><a href="../titlepage.html">Bhikkhu Manual</a></li><li class="expanded affix "><a href="../first-lines.html">List of First Lines</a></li><li class="expanded "><a href="../essential-chants.html"><strong aria-hidden="true">1.</strong> Essential Chants</a></li><li><ol class="section"><li class="expanded "><a href="../chants/morning-chanting.html" class="active"><strong aria-hidden="true">1.1.</strong> Morning Chanting</a></li><li class="expanded "><a href="../chants/evening-chanting.html"><strong aria-hidden="true">1.2.</strong> Evening Chanting</a></li><li class="expanded "><a href="../chants/reflections.html"><strong aria-hidden="true">1.3.</strong> Reflections</a></li><li class="expanded "><a href="../chants/parittas.html"><strong aria-hidden="true">1.4.</strong> Paritta Chants</a></li><li class="expanded "><a href="../chants/anumodana.html"><strong aria-hidden="true">1.5.</strong> Anumodanā</a></li><li class="expanded "><a href="../chants/funeral-chants.html"><strong aria-hidden="true">1.6.</strong> Funeral Chants</a></li><li class="expanded "><a href="../chants/suttas.html"><strong aria-hidden="true">1.7.</strong> Suttas</a></li><li class="expanded "><a href="../chants/patimokkha-chants.html"><strong aria-hidden="true">1.8.</strong> Pāṭimokkha Chants</a></li><li class="expanded "><a href="../chants/sri-lanka.html"><strong aria-hidden="true">1.9.</strong> Chants Used in Sri Lanka</a></li></ol></li><li class="expanded "><a href="../vinaya-notes.html"><strong aria-hidden="true">2.</strong> Vinaya Notes</a></li><li><ol class="section"><li class="expanded "><a href="../vinaya/guidelines.html"><strong aria-hidden="true">2.1.</strong> Guidelines</a></li><li class="expanded "><a href="../vinaya/requisites.html"><strong aria-hidden="true">2.2.</strong> Requisites</a></li><li class="expanded "><a href="../vinaya/offences.html"><strong aria-hidden="true">2.3.</strong> Offences</a></li><li class="expanded "><a href="../vinaya/uposatha.html"><strong aria-hidden="true">2.4.</strong> Uposatha</a></li><li class="expanded "><a href="../vinaya/rains-and-kathina.html"><strong aria-hidden="true">2.5.</strong> Rains and Kathina</a></li><li class="expanded "><a href="../vinaya/other-procedures.html"><strong aria-hidden="true">2.6.</strong> Other Procedures</a></li><li class="expanded "><a href="../vinaya/useful-notes.html"><strong aria-hidden="true">2.7.</strong> Useful Notes</a></li></ol></li><li class="expanded "><a href="../appendix.html"><strong aria-hidden="true">3.</strong> Appendix</a></li><li><ol class="section"><li class="expanded "><a href="../pali-phonetics-and-pronunciation.html"><strong aria-hidden="true">3.1.</strong> Pāli Phonetics and Pronunciation</a></li><li class="expanded "><a href="../quotations.html"><strong aria-hidden="true">3.2.</strong> Quotations</a></li></ol></li><li class="expanded "><a href="../print-guide.html"><strong aria-hidden="true">4.</strong> Print Guide</a></li><li class="expanded "><a href="../copyright.html"><strong aria-hidden="true">5.</strong> Copyright</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -151,6 +151,23 @@
                 <div id="content" class="content">
                     <main>
                         <h1><a class="header" href="#morning-chanting" id="morning-chanting">Morning Chanting</a></h1>
+<p><strong>Contents</strong></p>
+<ul>
+<li><a href="#yo-so-bhagava">Dedication of Offerings</a></li>
+<li><a href="#dedication">Dedication of Offerings (English)</a></li>
+<li><a href="#homage-pali">Preliminary Homage</a></li>
+<li><a href="#homage-english">Preliminary Homage (English)</a></li>
+<li><a href="#buddha-pali">Homage to the Buddha</a></li>
+<li><a href="#buddha-english">Homage to the Buddha (English)</a></li>
+<li><a href="#dhamma-pali">Homage to the Dhamma</a></li>
+<li><a href="#dhamma-english">Homage to the Dhamma (English)</a></li>
+<li><a href="#sangha-pali">Homage to the Saṅgha</a></li>
+<li><a href="#sangha-english">Homage to the Saṅgha (English)</a></li>
+<li><a href="#buddho-susuddho">Salutation to the Triple Gem</a></li>
+<li><a href="#salutation-english">Salutation to the Triple Gem (English)</a></li>
+<li><a href="#closing-pali">Closing Homage</a></li>
+<li><a href="#closing-english">Closing Homage (English)</a></li>
+</ul>
 <h2><a class="header" href="#dedication-of-offeringsa-idyo-so-bhagavaa" id="dedication-of-offeringsa-idyo-so-bhagavaa">Dedication of Offerings<a id="yo-so-bhagava"></a></a></h2>
 <p>[Yo so] bhagavā arahaṃ sammāsambuddho<br />
 Svākkhāto yena bhagavatā dhammo<br />
@@ -167,33 +184,33 @@ Buddhaṃ bhagavantaṃ abhivādemi<br />
 Dhammaṃ namassāmi<br />
 [Supaṭipanno] bhagavato sāvakasaṅgho<br />
 Saṅghaṃ namāmi</p>
-<h2><a class="header" href="#dedication-of-offerings-english" id="dedication-of-offerings-english">Dedication of Offerings (English)</a></h2>
+<h2><a class="header" href="#dedication-of-offerings-englisha-iddedicationa" id="dedication-of-offerings-englisha-iddedicationa">Dedication of Offerings (English)<a id="dedication"></a></a></h2>
 <p>To the Blessed One, the Lord, who fully attained perfect enlightenment,<br />
 To the Teaching which he expounded so well,<br />
 And to the Blessed One’s disciples who have practised well,<br />
-To these --- the Buddha, the Dhamma, and the Saṅgha ---<br />
+To these – the Buddha, the Dhamma, and the Saṅgha –<br />
 We render with offerings our rightful homage.<br />
 It is well for us that the Blessed One, having attained liberation,<br />
 Still had compassion for later generations.<br />
 May these simple offerings be accepted<br />
 For our long-lasting benefit and for the happiness it gives us.</p>
-<p>The Lord, the Perfectly Enlightened and Blessed One ---<br />
+<p>The Lord, the Perfectly Enlightened and Blessed One –<br />
 I render homage to the Buddha, the Blessed One.</p>
-<p>The Teaching so completely explained by him ---<br />
+<p>The Teaching so completely explained by him –<br />
 I bow to the Dhamma.</p>
-<p>The Blessed One’s disciples who have practised well ---<br />
+<p>The Blessed One’s disciples who have practised well –<br />
 I bow to the Saṅgha.</p>
-<h2><a class="header" href="#preliminary-homage" id="preliminary-homage">Preliminary Homage</a></h2>
+<h2><a class="header" href="#preliminary-homagea-idhomage-palia" id="preliminary-homagea-idhomage-palia">Preliminary Homage<a id="homage-pali"></a></a></h2>
 <blockquote>
 <p>[Handa mayaṃ buddhassa bhagavato pubbabhāga-namakāraṃ karomase]</p>
 </blockquote>
 <p>Namo tassa bhagavato arahato sammāsambuddhassa (×3)</p>
-<h2><a class="header" href="#preliminary-homage-english" id="preliminary-homage-english">Preliminary Homage (English)</a></h2>
+<h2><a class="header" href="#preliminary-homage-englisha-idhomage-englisha" id="preliminary-homage-englisha-idhomage-englisha">Preliminary Homage (English)<a id="homage-english"></a></a></h2>
 <blockquote>
 <p>[Now let us pay preliminary homage to the Buddha.]</p>
 </blockquote>
 <p>Homage to the Blessed, Noble, and Perfectly Enlightened One. (×3)</p>
-<h2><a class="header" href="#homage-to-the-buddha" id="homage-to-the-buddha">Homage to the Buddha</a></h2>
+<h2><a class="header" href="#homage-to-the-buddhaa-idbuddha-palia" id="homage-to-the-buddhaa-idbuddha-palia">Homage to the Buddha<a id="buddha-pali"></a></a></h2>
 <blockquote>
 <p>[Handa mayaṃ buddhābhitthutiṃ karomase]</p>
 </blockquote>
@@ -206,7 +223,7 @@ Sassamaṇa-brāhmaṇiṃ pajaṃ sadeva-manussaṃ sayaṃ abhiññā sacchika
 Yo dhammaṃ desesi ādi-kalyāṇaṃ majjhe-kalyāṇaṃ pariyosāna-kalyāṇaṃ<br />
 Sātthaṃ sabyañjanaṃ kevala-paripuṇṇaṃ parisuddhaṃ brahma-cariyaṃ pakāsesi<br />
 Tam-ahaṃ bhagavantaṃ abhipūjayāmi tam-ahaṃ bhagavantaṃ sirasā namāmi</p>
-<h2><a class="header" href="#homage-to-the-buddha-english" id="homage-to-the-buddha-english">Homage to the Buddha (English)</a></h2>
+<h2><a class="header" href="#homage-to-the-buddha-englisha-idbuddha-englisha" id="homage-to-the-buddha-englisha-idbuddha-englisha">Homage to the Buddha (English)<a id="buddha-english"></a></a></h2>
 <blockquote>
 <p>[Now let us chant in praise of the Buddha.]</p>
 </blockquote>
@@ -222,7 +239,7 @@ Its seekers and sages, celestial and human beings, he has by deep insight reveal
 He has pointed out the Dhamma: beautiful in the beginning, beautiful in the middle, beautiful in the end.<br />
 He has explained the Spiritual Life of complete purity in its essence and conventions.<br />
 I chant my praise to the Blessed One, I bow my head to the Blessed One.</p>
-<h2><a class="header" href="#homage-to-the-dhamma" id="homage-to-the-dhamma">Homage to the Dhamma</a></h2>
+<h2><a class="header" href="#homage-to-the-dhammaa-iddhamma-palia" id="homage-to-the-dhammaa-iddhamma-palia">Homage to the Dhamma<a id="dhamma-pali"></a></a></h2>
 <blockquote>
 <p>[Handa mayaṃ dhammābhitthutiṃ karomase]</p>
 </blockquote>
@@ -230,7 +247,7 @@ I chant my praise to the Blessed One, I bow my head to the Blessed One.</p>
 Sandiṭṭhiko, akāliko, ehipassiko, opanayiko<br />
 Paccattaṃ veditabbo viññūhi<br />
 Tam-ahaṃ dhammaṃ abhipūjayāmi tam-ahaṃ dhammaṃ sirasā namāmi</p>
-<h2><a class="header" href="#homage-to-the-dhamma-english" id="homage-to-the-dhamma-english">Homage to the Dhamma (English)</a></h2>
+<h2><a class="header" href="#homage-to-the-dhamma-englisha-iddhamma-englisha" id="homage-to-the-dhamma-englisha-iddhamma-englisha">Homage to the Dhamma (English)<a id="dhamma-english"></a></a></h2>
 <blockquote>
 <p>[Now let us chant in praise of the Dhamma.]</p>
 </blockquote>
@@ -241,7 +258,7 @@ Encouraging investigation,<br />
 Leading inwards,<br />
 To be experienced individually by the wise.<br />
 I chant my praise to this Teaching, I bow my head to this Truth.</p>
-<h2><a class="header" href="#homage-to-the-saṅgha" id="homage-to-the-saṅgha">Homage to the Saṅgha</a></h2>
+<h2><a class="header" href="#homage-to-the-saṅghaa-idsangha-palia" id="homage-to-the-saṅghaa-idsangha-palia">Homage to the Saṅgha<a id="sangha-pali"></a></a></h2>
 <blockquote>
 <p>[Handa mayaṃ saṅghābhitthutiṃ karomase]</p>
 </blockquote>
@@ -254,15 +271,15 @@ Esa bhagavato sāvakasaṅgho<br />
 Āhuneyyo, pāhuneyyo, dakkhiṇeyyo, añjali-karaṇīyo<br />
 Anuttaraṃ puññakkhettaṃ lokassa<br />
 Tam-ahaṃ saṅghaṃ abhipūjayāmi tam-ahaṃ saṅghaṃ sirasā namāmi</p>
-<h2><a class="header" href="#homage-to-the-saṅgha-english" id="homage-to-the-saṅgha-english">Homage to the Saṅgha (English)</a></h2>
+<h2><a class="header" href="#homage-to-the-saṅgha-englisha-idsangha-englisha" id="homage-to-the-saṅgha-englisha-idsangha-englisha">Homage to the Saṅgha (English)<a id="sangha-english"></a></a></h2>
 <blockquote>
 <p>[Now let us chant in praise of the Saṅgha.]</p>
 </blockquote>
 <p>They are the Blessed One’s disciples, who have practised well,<br />
 Who have practised directly,<br />
 Who have practised insightfully,<br />
-Those who practise with integrity ---<br />
-That is the four pairs, the eight kinds of noble beings ---<br />
+Those who practise with integrity –<br />
+That is the four pairs, the eight kinds of noble beings –<br />
 These are the Blessed One’s disciples.<br />
 Such ones are worthy of gifts,<br />
 Worthy of hospitality,<br />
@@ -330,26 +347,26 @@ Saddhā agārasmā anagāriyaṃ pabbajitā<br />
 Tasmiṃ bhagavati brahma-cariyaṃ carāma<br />
 Bhikkhūnaṃ/Sīladharānaṃ sikkhāsājīva-samāpannā<br />
 Taṃ no brahma-cariyaṃ imassa kevalassa dukkha-kkhandhassa antakiriyāya saṃvattatu</p>
-<h2><a class="header" href="#salutation-to-the-triple-gem-english" id="salutation-to-the-triple-gem-english">Salutation to the Triple Gem (English)</a></h2>
+<h2><a class="header" href="#salutation-to-the-triple-gem-englisha-idsalutation-englisha" id="salutation-to-the-triple-gem-englisha-idsalutation-englisha">Salutation to the Triple Gem (English)<a id="salutation-english"></a></a></h2>
 <blockquote>
 <p>[Now let us chant our salutation to the Triple Gem and a passage to arouse urgency.]</p>
 </blockquote>
 <p>The Buddha, absolutely pure, with ocean-like compassion,<br />
 Possessing the clear sight of wisdom,<br />
-Destroyer of worldly self-corruption ---<br />
+Destroyer of worldly self-corruption –<br />
 Devotedly indeed, that Buddha I revere.<br />
 The Teaching of the Lord, like a lamp,<br />
 Illuminating the Path and its Fruit: the Deathless,<br />
-That which is beyond the conditioned world ---<br />
+That which is beyond the conditioned world –<br />
 Devotedly indeed, that Dhamma I revere.<br />
 The Saṅgha, the most fertile ground for cultivation,<br />
 Those who have realized peace, awakened after the Accomplished One,<br />
-Noble and wise, all longing abandoned ---<br />
+Noble and wise, all longing abandoned –<br />
 Devotedly indeed, that Saṅgha I revere.</p>
 <p>This salutation should be made to that which is worthy.<br />
 Through the power of such good action, may all obstacles disappear.<br />
 One who knows things as they are has come into this world; and he is an Arahant, a perfectly Awakened being,<br />
-Purifying the way leading out of delusion, calming and directing to perfect peace, and leading to enlightenment --- this Way he has made known.</p>
+Purifying the way leading out of delusion, calming and directing to perfect peace, and leading to enlightenment – this Way he has made known.</p>
 <p>Having heard the Teaching, we know this:<br />
 Birth is dukkha,<br />
 Ageing is dukkha,<br />
@@ -404,19 +421,19 @@ So too are the Dhamma and the Saṅgha.<br />
 Attentively we follow the pathway of that Blessed One, with all of our mindfulness and strength.<br />
 May then the cultivation of this practice<br />
 Lead us to the end of every kind of suffering.</p>
-<h2><a class="header" href="#closing-homage" id="closing-homage">Closing Homage</a></h2>
+<h2><a class="header" href="#closing-homagea-idclosing-palia" id="closing-homagea-idclosing-palia">Closing Homage<a id="closing-pali"></a></a></h2>
 <p>[Arahaṃ] sammāsambuddho bhagavā<br />
 Buddhaṃ bhagavantaṃ abhivādemi</p>
 <p>[Svākkhāto] bhagavatā dhammo<br />
 Dhammaṃ namassāmi</p>
 <p>[Supaṭipanno] bhagavato sāvakasaṅgho<br />
 Saṅghaṃ namāmi</p>
-<h2><a class="header" href="#closing-homage-english" id="closing-homage-english">Closing Homage (English)</a></h2>
-<p>The Lord, the Perfectly Enlightened and Blessed One ---<br />
+<h2><a class="header" href="#closing-homage-englisha-idclosing-englisha" id="closing-homage-englisha-idclosing-englisha">Closing Homage (English)<a id="closing-english"></a></a></h2>
+<p>The Lord, the Perfectly Enlightened and Blessed One –<br />
 I render homage to the Buddha, the Blessed One.</p>
-<p>The Teaching, so completely explained by him ---<br />
+<p>The Teaching, so completely explained by him –<br />
 I bow to the Dhamma.</p>
-<p>The Blessed One’s disciples, who have practised well ---<br />
+<p>The Blessed One’s disciples, who have practised well –<br />
 I bow to the Saṅgha.</p>
 
                     </main>
