--- a/vinaya/useful-notes.html
+++ b/vinaya/useful-notes.html
@@ -83,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div id="sidebar-scrollbox" class="sidebar-scrollbox">
-                <ol class="chapter"><li class="expanded affix "><a href="../titlepage.html">Bhikkhu Manual</a></li><li class="expanded affix "><a href="../first-lines.html">List of First Lines</a></li><li class="expanded "><a href="../essential-chants.html"><strong aria-hidden="true">1.</strong> Essential Chants</a></li><li><ol class="section"><li class="expanded "><a href="../chants/morning-chanting.html"><strong aria-hidden="true">1.1.</strong> Morning Chanting</a></li><li class="expanded "><a href="../chants/evening-chanting.html"><strong aria-hidden="true">1.2.</strong> Evening Chanting</a></li><li class="expanded "><a href="../chants/reflections.html"><strong aria-hidden="true">1.3.</strong> Reflections</a></li><li class="expanded "><a href="../chants/parittas.html"><strong aria-hidden="true">1.4.</strong> Parittas</a></li><li class="expanded "><a href="../chants/anumodana.html"><strong aria-hidden="true">1.5.</strong> Anumodanā</a></li><li class="expanded "><a href="../chants/funeral-chants.html"><strong aria-hidden="true">1.6.</strong> Funeral Chants</a></li><li class="expanded "><a href="../chants/suttas.html"><strong aria-hidden="true">1.7.</strong> Suttas</a></li><li class="expanded "><a href="../chants/patimokkha-chants.html"><strong aria-hidden="true">1.8.</strong> Pāṭimokkha Chants</a></li><li class="expanded "><a href="../chants/sri-lanka.html"><strong aria-hidden="true">1.9.</strong> Chants Used in Sri Lanka</a></li></ol></li><li class="expanded "><a href="../vinaya-notes.html"><strong aria-hidden="true">2.</strong> Vinaya Notes</a></li><li><ol class="section"><li class="expanded "><a href="../vinaya/ocean-quote.html"><strong aria-hidden="true">2.1.</strong> Quote</a></li><li class="expanded "><a href="../vinaya/guidelines.html"><strong aria-hidden="true">2.2.</strong> Guidelines</a></li><li class="expanded "><a href="../vinaya/requisites.html"><strong aria-hidden="true">2.3.</strong> Requisites</a></li><li class="expanded "><a href="../vinaya/offences.html"><strong aria-hidden="true">2.4.</strong> Offences</a></li><li class="expanded "><a href="../vinaya/uposatha.html"><strong aria-hidden="true">2.5.</strong> Uposatha</a></li><li class="expanded "><a href="../vinaya/rains-and-kathina.html"><strong aria-hidden="true">2.6.</strong> Rains and Kathina</a></li><li class="expanded "><a href="../vinaya/other-procedures.html"><strong aria-hidden="true">2.7.</strong> Other Procedures</a></li><li class="expanded "><a href="../vinaya/useful-notes.html" class="active"><strong aria-hidden="true">2.8.</strong> Useful Notes</a></li></ol></li><li class="expanded "><a href="../appendix.html"><strong aria-hidden="true">3.</strong> Appendix</a></li><li><ol class="section"><li class="expanded "><a href="../pali-phonetics-and-pronunciation.html"><strong aria-hidden="true">3.1.</strong> Pāli Phonetics and Pronunciation</a></li><li class="expanded "><a href="../dhamma-quotes.html"><strong aria-hidden="true">3.2.</strong> Dhamma Quotes</a></li></ol></li><li class="expanded "><a href="../print-guide.html"><strong aria-hidden="true">4.</strong> Print Guide</a></li><li class="expanded "><a href="../copyright.html"><strong aria-hidden="true">5.</strong> Copyright</a></li></ol>
+                <ol class="chapter"><li class="expanded affix "><a href="../titlepage.html">Bhikkhu Manual</a></li><li class="expanded affix "><a href="../first-lines.html">List of First Lines</a></li><li class="expanded "><a href="../essential-chants.html"><strong aria-hidden="true">1.</strong> Essential Chants</a></li><li><ol class="section"><li class="expanded "><a href="../chants/morning-chanting.html"><strong aria-hidden="true">1.1.</strong> Morning Chanting</a></li><li class="expanded "><a href="../chants/evening-chanting.html"><strong aria-hidden="true">1.2.</strong> Evening Chanting</a></li><li class="expanded "><a href="../chants/reflections.html"><strong aria-hidden="true">1.3.</strong> Reflections</a></li><li class="expanded "><a href="../chants/parittas.html"><strong aria-hidden="true">1.4.</strong> Paritta Chants</a></li><li class="expanded "><a href="../chants/anumodana.html"><strong aria-hidden="true">1.5.</strong> Anumodanā</a></li><li class="expanded "><a href="../chants/funeral-chants.html"><strong aria-hidden="true">1.6.</strong> Funeral Chants</a></li><li class="expanded "><a href="../chants/suttas.html"><strong aria-hidden="true">1.7.</strong> Suttas</a></li><li class="expanded "><a href="../chants/patimokkha-chants.html"><strong aria-hidden="true">1.8.</strong> Pāṭimokkha Chants</a></li><li class="expanded "><a href="../chants/sri-lanka.html"><strong aria-hidden="true">1.9.</strong> Chants Used in Sri Lanka</a></li></ol></li><li class="expanded "><a href="../vinaya-notes.html"><strong aria-hidden="true">2.</strong> Vinaya Notes</a></li><li><ol class="section"><li class="expanded "><a href="../vinaya/guidelines.html"><strong aria-hidden="true">2.1.</strong> Guidelines</a></li><li class="expanded "><a href="../vinaya/requisites.html"><strong aria-hidden="true">2.2.</strong> Requisites</a></li><li class="expanded "><a href="../vinaya/offences.html"><strong aria-hidden="true">2.3.</strong> Offences</a></li><li class="expanded "><a href="../vinaya/uposatha.html"><strong aria-hidden="true">2.4.</strong> Uposatha</a></li><li class="expanded "><a href="../vinaya/rains-and-kathina.html"><strong aria-hidden="true">2.5.</strong> Rains and Kathina</a></li><li class="expanded "><a href="../vinaya/other-procedures.html"><strong aria-hidden="true">2.6.</strong> Other Procedures</a></li><li class="expanded "><a href="../vinaya/useful-notes.html" class="active"><strong aria-hidden="true">2.7.</strong> Useful Notes</a></li></ol></li><li class="expanded "><a href="../appendix.html"><strong aria-hidden="true">3.</strong> Appendix</a></li><li><ol class="section"><li class="expanded "><a href="../pali-phonetics-and-pronunciation.html"><strong aria-hidden="true">3.1.</strong> Pāli Phonetics and Pronunciation</a></li><li class="expanded "><a href="../quotations.html"><strong aria-hidden="true">3.2.</strong> Quotations</a></li></ol></li><li class="expanded "><a href="../print-guide.html"><strong aria-hidden="true">4.</strong> Print Guide</a></li><li class="expanded "><a href="../copyright.html"><strong aria-hidden="true">5.</strong> Copyright</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -151,6 +151,117 @@
                 <div id="content" class="content">
                     <main>
                         <h1><a class="header" href="#useful-notes" id="useful-notes">Useful Notes</a></h1>
+<p><strong>Contents</strong></p>
+<ul>
+<li><a href="#invitation">Invitation to Request</a></li>
+<li><a href="#hatthapasa-distance">Hatthapāsa Distance</a></li>
+<li><a href="#days-and-dawns">Days and Dawns</a></li>
+<li><a href="#seven-day-allowable-period">Seven-day Allowable Period</a></li>
+<li><a href="#mixing-allowables">Mixing Allowables</a></li>
+<li><a href="#the-eight-utensils">The Eight Utensils (aṭṭha-parikkhārā)</a></li>
+<li><a href="#unallowable-meats">Unallowable Meats</a></li>
+<li><a href="#abusive-speech">Abusive Speech</a></li>
+<li><a href="#lighting-a-fire">Lighting a Fire</a></li>
+</ul>
+<h2><a class="header" href="#invitation-to-requesta-idinvitationa" id="invitation-to-requesta-idinvitationa">Invitation to Request<a id="invitation"></a></a></h2>
+<p>An invitation to request (<em>pavāraṇā</em>), unless otherwise specified, lasts at most
+four months. One may make requests of blood-relatives (but not in-laws) without
+receiving an invitation. One may give special help to one’s parents as well as
+to one’s steward and to anyone preparing to become a bhikkhu.</p>
+<p><em>Vin.IV.101–104</em></p>
+<h2><a class="header" href="#hatthapāsa-distancea-idhatthapasa-distancea" id="hatthapāsa-distancea-idhatthapasa-distancea">Hatthapāsa Distance<a id="hatthapasa-distance"></a></a></h2>
+<p>The <em>hatthapāsa</em> generally means a distance within arm’s reach, or
+forearm’s length. There are variations in the specific way of measuring
+it.</p>
+<p>It may be measured from the trunk of the body, until the tip of the
+fingers of one’s extended hands, about 1.25 metres. That is, one bhikkhu
+should be able to reach the other.</p>
+<p>Other interpretations consider that the distance between the bodies of
+two bhikkhus should not be greater than the length from the elbow to the
+tip of the fingers. For example, a forearm’s distance between the knees
+of two seated bhikkhus.</p>
+<p>The distance is measured horizontally, the vertical elevation is not
+taken into account.</p>
+<h2><a class="header" href="#days-and-dawnsa-iddays-and-dawnsa" id="days-and-dawnsa-iddays-and-dawnsa">Days and Dawns<a id="days-and-dawns"></a></a></h2>
+<p>The Vinaya definition for <em>one day</em> is the period of time between two
+dawnrises.</p>
+<p>If one extends a hand and is able to see the lines in the palm (assuming
+the sky is clear), the dawnrise <em>has already passed</em>.</p>
+<p>One may also use a clock and the time of <em>nautical twilight</em>. While the
+Sun is between 12 and 6 degrees below the horizon, dawnrise <em>has not yet
+passed</em>. Once the Sun is less than 6 degrees below the horizon, dawnrise
+<em>has passed</em>.</p>
+<h2><a class="header" href="#seven-day-allowable-perioda-idseven-day-allowable-perioda" id="seven-day-allowable-perioda-idseven-day-allowable-perioda">Seven-day Allowable Period<a id="seven-day-allowable-period"></a></a></h2>
+<p>The <em>seven-day tonics</em> are permitted to be kept until the seventh
+<em>dawnrise</em>, not for a seven-day period, which is already past the
+seventh dawnrise.</p>
+<p>The factor of <em>effort</em> here is keeping the tonic past the seventh
+dawnrise after receiving it.</p>
+<p><em>Perception</em> is not a factor, if one thinks the seventh dawnrise hasn’t
+passed, but it has, it is nonetheless a <em>nissaggiya pācittiya</em> offence.</p>
+<p>The offence is to be confessed by the bhikkhu who received the items. If
+he has travelled away since, and the items are no longer with him to be
+forfeited, he may confess the offence, and the other bhikkhus may
+forfeit the items.</p>
+<h2><a class="header" href="#mixing-allowablesa-idmixing-allowablesa" id="mixing-allowablesa-idmixing-allowablesa">Mixing Allowables<a id="mixing-allowables"></a></a></h2>
+<p>The day on which food, one-day, seven-day and lifetime allowables are
+received should be kept in mind when mixing them, or consuming a
+mixture. Such a mistake can be made for example when receiving biscuits
+at the meal time, and mixing it with tea or coffee made with allowables
+offered on a previous day.</p>
+<p>The mixture takes on the shortest lifetime of the ingredients. The
+combinations are described in the <em>Mahāvagga</em>:</p>
+<p>(a.) 1d juice, received that morning<br />
+<span class="vin"></span>+ food, received that morning<br />
+<span class="vin"></span>→ is allowable that morning</p>
+<p>(b.) 7d tonic, received that morning<br />
+<span class="vin"></span>+ food, received that morning<br />
+<span class="vin"></span>→ is allowable that morning</p>
+<p>(c.) lifetime medicine, received that morning<br />
+<span class="vin"></span>+ food, received that morning<br />
+<span class="vin"></span>→ is allowable that morning</p>
+<p>(d.) 7d tonic, received sometime<br />
+<span class="vin"></span>+ juice, received that day<br />
+<span class="vin"></span>→ is allowable until dawn</p>
+<p>(e.) lifetime medicine, received sometime<br />
+<span class="vin"></span>+ juice, received that day<br />
+<span class="vin"></span>→ is allowable until dawn</p>
+<p>(f.) lifetime medicine, received sometime<br />
+<span class="vin"></span>+ 7d tonic, received sometime<br />
+<span class="vin"></span>→ is allowable for 7 days</p>
+<p>Consuming the mixture outside its allowable period is a <em>pācittiya</em> offence
+under <em>Pc 38 (Stored food)</em>, even through lack of mindfulness. Perception is not
+a factor.</p>
+<p><em>Mv. VI.40.3.</em></p>
+<h2><a class="header" href="#the-eight-utensils-aṭṭha-parikkhārāa-idthe-eight-utensilsa" id="the-eight-utensils-aṭṭha-parikkhārāa-idthe-eight-utensilsa">The Eight Utensils (aṭṭha-parikkhārā)<a id="the-eight-utensils"></a></a></h2>
+<p>The three robes, the bowl, a razor/sharp knife, needle, belt, water-filter.</p>
+<p><em>Ja.I.65</em></p>
+<h2><a class="header" href="#unallowable-meatsa-idunallowable-meatsa" id="unallowable-meatsa-idunallowable-meatsa">Unallowable Meats<a id="unallowable-meats"></a></a></h2>
+<p>The flesh of humans (this is a base for <em>thullaccaya</em>), elephants, horses, dogs,
+snakes, lions, tigers, leopards, bears, and panthers.</p>
+<p><em>Vin.I.218-219</em></p>
+<p>Also unallowable is flesh incompletely cooked, and meat from an animal seen,
+heard or suspected to have been killed in order that its meat be offered to
+bhikkhus.</p>
+<p><em>Vin.I.218-219</em></p>
+<h2><a class="header" href="#abusive-speecha-idabusive-speecha" id="abusive-speecha-idabusive-speecha">Abusive Speech<a id="abusive-speech"></a></a></h2>
+<p>The bases of abuse are rank of birth, personal name, clan name, work, art,
+disease, physical appearance, mental stains, faults, and other bases. There are
+both direct abuse and sarcasm and ridicule. Abusive speech may be a base for
+either expiation (or wrong-doing) or, when only teasing, for <em>dubbhāsita</em>.</p>
+<p><em>Vin.IV.4-11</em></p>
+<h2><a class="header" href="#lighting-a-firea-idlighting-a-firea" id="lighting-a-firea-idlighting-a-firea">Lighting a Fire<a id="lighting-a-fire"></a></a></h2>
+<p>Suitable reasons for lighting a fire, or having one lit (Pc. 56) include the
+health benefit of warmth, or needing the fire for a task, such as boiling water
+or burning garden waste.</p>
+<p>For the health benefit, one is considered <em>ill (gilāno)</em> when one can not get by
+comfortably without warming oneself.</p>
+<p>For a task, lighting a fire may damage plants (Pc. 11) and living creatures (Pc.
+61), either on the ground or in the fire wood. Damage to plants or living
+creatures on the ground may be avoided by lighting the fire on stones, sand, in
+a tin box, or using portable gas stoves.</p>
+<p>One may also indicate the task (<em>kappiya-vohāra</em>) for lay friends without an
+explicit instruction, who may light the fire.</p>
 
                     </main>
 
