--- a/vinaya/requisites.html
+++ b/vinaya/requisites.html
@@ -83,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div id="sidebar-scrollbox" class="sidebar-scrollbox">
-                <ol class="chapter"><li class="expanded affix "><a href="../titlepage.html">Bhikkhu Manual</a></li><li class="expanded affix "><a href="../first-lines.html">List of First Lines</a></li><li class="expanded "><a href="../essential-chants.html"><strong aria-hidden="true">1.</strong> Essential Chants</a></li><li><ol class="section"><li class="expanded "><a href="../chants/morning-chanting.html"><strong aria-hidden="true">1.1.</strong> Morning Chanting</a></li><li class="expanded "><a href="../chants/evening-chanting.html"><strong aria-hidden="true">1.2.</strong> Evening Chanting</a></li><li class="expanded "><a href="../chants/reflections.html"><strong aria-hidden="true">1.3.</strong> Reflections</a></li><li class="expanded "><a href="../chants/parittas.html"><strong aria-hidden="true">1.4.</strong> Parittas</a></li><li class="expanded "><a href="../chants/anumodana.html"><strong aria-hidden="true">1.5.</strong> Anumodanā</a></li><li class="expanded "><a href="../chants/funeral-chants.html"><strong aria-hidden="true">1.6.</strong> Funeral Chants</a></li><li class="expanded "><a href="../chants/suttas.html"><strong aria-hidden="true">1.7.</strong> Suttas</a></li><li class="expanded "><a href="../chants/patimokkha-chants.html"><strong aria-hidden="true">1.8.</strong> Pāṭimokkha Chants</a></li><li class="expanded "><a href="../chants/sri-lanka.html"><strong aria-hidden="true">1.9.</strong> Chants Used in Sri Lanka</a></li></ol></li><li class="expanded "><a href="../vinaya-notes.html"><strong aria-hidden="true">2.</strong> Vinaya Notes</a></li><li><ol class="section"><li class="expanded "><a href="../vinaya/ocean-quote.html"><strong aria-hidden="true">2.1.</strong> Quote</a></li><li class="expanded "><a href="../vinaya/guidelines.html"><strong aria-hidden="true">2.2.</strong> Guidelines</a></li><li class="expanded "><a href="../vinaya/requisites.html" class="active"><strong aria-hidden="true">2.3.</strong> Requisites</a></li><li class="expanded "><a href="../vinaya/offences.html"><strong aria-hidden="true">2.4.</strong> Offences</a></li><li class="expanded "><a href="../vinaya/uposatha.html"><strong aria-hidden="true">2.5.</strong> Uposatha</a></li><li class="expanded "><a href="../vinaya/rains-and-kathina.html"><strong aria-hidden="true">2.6.</strong> Rains and Kathina</a></li><li class="expanded "><a href="../vinaya/other-procedures.html"><strong aria-hidden="true">2.7.</strong> Other Procedures</a></li><li class="expanded "><a href="../vinaya/useful-notes.html"><strong aria-hidden="true">2.8.</strong> Useful Notes</a></li></ol></li><li class="expanded "><a href="../appendix.html"><strong aria-hidden="true">3.</strong> Appendix</a></li><li><ol class="section"><li class="expanded "><a href="../pali-phonetics-and-pronunciation.html"><strong aria-hidden="true">3.1.</strong> Pāli Phonetics and Pronunciation</a></li><li class="expanded "><a href="../dhamma-quotes.html"><strong aria-hidden="true">3.2.</strong> Dhamma Quotes</a></li></ol></li><li class="expanded "><a href="../print-guide.html"><strong aria-hidden="true">4.</strong> Print Guide</a></li><li class="expanded "><a href="../copyright.html"><strong aria-hidden="true">5.</strong> Copyright</a></li></ol>
+                <ol class="chapter"><li class="expanded affix "><a href="../titlepage.html">Bhikkhu Manual</a></li><li class="expanded affix "><a href="../first-lines.html">List of First Lines</a></li><li class="expanded "><a href="../essential-chants.html"><strong aria-hidden="true">1.</strong> Essential Chants</a></li><li><ol class="section"><li class="expanded "><a href="../chants/morning-chanting.html"><strong aria-hidden="true">1.1.</strong> Morning Chanting</a></li><li class="expanded "><a href="../chants/evening-chanting.html"><strong aria-hidden="true">1.2.</strong> Evening Chanting</a></li><li class="expanded "><a href="../chants/reflections.html"><strong aria-hidden="true">1.3.</strong> Reflections</a></li><li class="expanded "><a href="../chants/parittas.html"><strong aria-hidden="true">1.4.</strong> Paritta Chants</a></li><li class="expanded "><a href="../chants/anumodana.html"><strong aria-hidden="true">1.5.</strong> Anumodanā</a></li><li class="expanded "><a href="../chants/funeral-chants.html"><strong aria-hidden="true">1.6.</strong> Funeral Chants</a></li><li class="expanded "><a href="../chants/suttas.html"><strong aria-hidden="true">1.7.</strong> Suttas</a></li><li class="expanded "><a href="../chants/patimokkha-chants.html"><strong aria-hidden="true">1.8.</strong> Pāṭimokkha Chants</a></li><li class="expanded "><a href="../chants/sri-lanka.html"><strong aria-hidden="true">1.9.</strong> Chants Used in Sri Lanka</a></li></ol></li><li class="expanded "><a href="../vinaya-notes.html"><strong aria-hidden="true">2.</strong> Vinaya Notes</a></li><li><ol class="section"><li class="expanded "><a href="../vinaya/guidelines.html"><strong aria-hidden="true">2.1.</strong> Guidelines</a></li><li class="expanded "><a href="../vinaya/requisites.html" class="active"><strong aria-hidden="true">2.2.</strong> Requisites</a></li><li class="expanded "><a href="../vinaya/offences.html"><strong aria-hidden="true">2.3.</strong> Offences</a></li><li class="expanded "><a href="../vinaya/uposatha.html"><strong aria-hidden="true">2.4.</strong> Uposatha</a></li><li class="expanded "><a href="../vinaya/rains-and-kathina.html"><strong aria-hidden="true">2.5.</strong> Rains and Kathina</a></li><li class="expanded "><a href="../vinaya/other-procedures.html"><strong aria-hidden="true">2.6.</strong> Other Procedures</a></li><li class="expanded "><a href="../vinaya/useful-notes.html"><strong aria-hidden="true">2.7.</strong> Useful Notes</a></li></ol></li><li class="expanded "><a href="../appendix.html"><strong aria-hidden="true">3.</strong> Appendix</a></li><li><ol class="section"><li class="expanded "><a href="../pali-phonetics-and-pronunciation.html"><strong aria-hidden="true">3.1.</strong> Pāli Phonetics and Pronunciation</a></li><li class="expanded "><a href="../quotations.html"><strong aria-hidden="true">3.2.</strong> Quotations</a></li></ol></li><li class="expanded "><a href="../print-guide.html"><strong aria-hidden="true">4.</strong> Print Guide</a></li><li class="expanded "><a href="../copyright.html"><strong aria-hidden="true">5.</strong> Copyright</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -151,6 +151,146 @@
                 <div id="content" class="content">
                     <main>
                         <h1><a class="header" href="#requisites" id="requisites">Requisites</a></h1>
+<p><strong>Contents</strong></p>
+<ul>
+<li><a href="#bindu">Bindu (Marking)</a></li>
+<li><a href="#determine-robe">Adhiṭṭhāna (Determining)</a></li>
+<li><a href="#relinquish-robe">Paccuddharaṇa (Relinquishing)</a></li>
+<li><a href="#vikappana">Vikappana (Sharing Ownership)</a>
+<ul>
+<li><a href="#general-address">Generally Addressing the Recipient</a></li>
+<li><a href="#recipient-by-name">Addressing the Recipient by Name</a></li>
+<li><a href="#receiving-bhikkhu-absent">Receiving Bhikkhu is Absent</a></li>
+</ul>
+</li>
+<li><a href="#vikappana-relinquishing">Vikappana-paccuddharaṇa (Relinquishing Shared Ownership)</a></li>
+</ul>
+<h2><a class="header" href="#bindu-markinga-idbindua" id="bindu-markinga-idbindua">Bindu (Marking)<a id="bindu"></a></a></h2>
+<p>Before use, a new robe must be marked with three dots, blue, green, black or
+brown in colour, saying, either out loud or mentally:</p>
+<p>‘Imaṃ bindukappaṃ karomi.’ (×3)<br />
+‘<em>I make this properly marked.</em>‘ <em>Vin.IV.120</em></p>
+<h2><a class="header" href="#adhiṭṭhāna-determininga-iddetermine-robea" id="adhiṭṭhāna-determininga-iddetermine-robea">Adhiṭṭhāna (Determining)<a id="determine-robe"></a></a></h2>
+<p>‘Imaṃ <em>saṅghāṭiṃ</em> adhiṭṭhāmi.’<br />
+‘<em>I determine this outer robe.</em>‘</p>
+<p>For ‘<em>saṅghāṭiṃ</em>‘ substitute item as appropriate:</p>
+<ul>
+<li>uttarā-saṅgaṃ (upper robe)</li>
+<li>antara-vāsakaṃ (lower robe)</li>
+<li>pattaṃ (alms bowl)</li>
+<li>nisīdanaṃ (sitting-cloth)</li>
+<li>kaṇḍu-paṭicchādiṃ (skin-eruption covering cloth)</li>
+<li>vassika-sāṭikaṃ (rains cloth)</li>
+<li>paccattharaṇaṃ (sleeping cloth)</li>
+<li>mukha-puñchana-colaṃ (handkerchief)</li>
+<li>parikkhāra-colaṃ (small requisite)</li>
+</ul>
+<p>The first three articles must be properly marked <em>before</em> being
+determined for use. Only one of each of these items may be determined at
+any one time.</p>
+<p>The rains cloth may be used only during the four months of the Rains.</p>
+<p>There is no limit to the number of articles which may be determined in
+each of the last three categories above, e.g.:</p>
+<p>‘Imāni <em>paccattharaṇāni</em> adhiṭṭhāmi.’<br />
+‘<em>I determine these sleeping cloths.</em>‘</p>
+<p>Substitute ‘<em>mukhapuñchana-colāni</em>‘ (handkerchiefs) or
+‘<em>parikkhāra-colāni</em>‘ (small requisites) as appropriate.</p>
+<p>Articles are determined either by touching the article and mentally
+reciting the relevant Pali passage, or by uttering the Pali passage
+without touching the article. In the latter case, if the article is
+beyond forearm’s length:</p>
+<p>‘imaṃ’ (this) → ‘etaṃ’ (that)<br />
+‘imāni’ (these) → ‘etāni’ (those)</p>
+<p><em>Sp.III.643-644</em></p>
+<h2><a class="header" href="#paccuddharaṇa-relinquishinga-idrelinquish-robea" id="paccuddharaṇa-relinquishinga-idrelinquish-robea">Paccuddharaṇa (Relinquishing)<a id="relinquish-robe"></a></a></h2>
+<p>When an outer robe, upper robe, lower robe, alms bowl or sitting-cloth is to be
+replaced, the article already determined must first be relinquished from use:</p>
+<p>‘Imaṃ saṅghāṭiṃ paccuddharāmi.’<br />
+‘<em>I relinquish this outer robe.</em>‘ <em>Sp.III.643</em></p>
+<p>Substitute the appropriate item for ‘<em>saṅghāṭiṃ</em>‘.</p>
+<p>Apart from relinquishing from use, a determined article ceases to be determined
+if it is given to another, is stolen, is taken on trust by a friend, or has a
+large visible hole in it.</p>
+<h2><a class="header" href="#vikappana-sharing-ownershipa-idvikappanaa" id="vikappana-sharing-ownershipa-idvikappanaa">Vikappana (Sharing Ownership)<a id="vikappana"></a></a></h2>
+<p>There are varied practices about sharing ownership. Here are the most common
+ways.</p>
+<h3><a class="header" href="#generally-addressing-the-recipienta-idgeneral-addressa" id="generally-addressing-the-recipienta-idgeneral-addressa">Generally Addressing the Recipient<a id="general-address"></a></a></h3>
+<p>In the presence of the receiving bhikkhu, and with the article within forearm’s length:</p>
+<p>‘Imaṃ cīvaraṃ tuyhaṃ vikappemi.’<br />
+‘<em>I share this robe with you.</em>‘</p>
+<p>‘Imāni cīvarāni tuyhaṃ vikappemi.’<br />
+‘<em>... these robes ...</em>‘</p>
+<p>‘Imaṃ pattaṃ tuyhaṃ vikappemi.’<br />
+‘<em>... this bowl ...</em>‘</p>
+<p>‘Ime patte tuyhaṃ vikappemi.’<br />
+‘<em>... these bowls ...</em>‘</p>
+<p>When the receiving bhikkhu is the senior:<br />
+‘tuyhaṃ’ → ‘āyasmato’</p>
+<p>When it is shared with more than one bhikkhu:<br />
+‘tuyhaṃ’ → ‘tumhākaṃ’</p>
+<p>When the article is beyond forearm’s length:</p>
+<p>‘imaṃ’ → ‘etaṃ’;<br />
+‘imāni’ → ‘etāni’;<br />
+‘ime’ → ‘ete’ <em>Vin.IV.122</em></p>
+<h3><a class="header" href="#addressing-the-recipient-by-namea-idrecipient-by-namea" id="addressing-the-recipient-by-namea-idrecipient-by-namea">Addressing the Recipient by Name<a id="recipient-by-name"></a></a></h3>
+<p>In the presence of the receiving bhikkhu (who is named, e.g., ‘<em>Uttaro</em>‘), and
+with the article within forearm’s length, one says to another bhikkhu:</p>
+<p>‘Imaṃ cīvaraṃ <em>uttarassa</em> bhikkhuno vikappemi.’<br />
+‘<em>I share this robe with Uttaro Bhikkhu.</em>‘</p>
+<p>When the receiving bhikkhu is the senior:<br />
+‘<em>uttarassa</em> bhikkhuno’ → ‘āyasmato <em>uttarassa</em>‘</p>
+<p>If it is shared with a novice:<br />
+‘<em>uttarassa</em> bhikkhuno’ → ‘<em>uttarassa</em> sāmaṇerassa’</p>
+<p>To share a bowl: ‘cīvaraṃ’ → ‘pattaṃ’</p>
+<p>If more than one article is to be shared substitute the plural form as in <a href="#general-address">Generally Addressing</a> above.</p>
+<p>When the item is beyond forearm’s length substitute as in <a href="#general-address">Generally Addressing</a> above.</p>
+<p><em>Vin.IV.122</em></p>
+<h3><a class="header" href="#receiving-bhikkhu-is-absenta-idreceiving-bhikkhu-absenta" id="receiving-bhikkhu-is-absenta-idreceiving-bhikkhu-absenta">Receiving Bhikkhu is Absent<a id="receiving-bhikkhu-absent"></a></a></h3>
+<p>In the absence of the receiving bhikkhus, say to a witness:</p>
+<p>‘Imaṃ cīvaraṃ vikappanatthāya tuyhaṃ dammi.’<br />
+‘<em>I give this robe to you for the purpose of sharing.</em>‘</p>
+<p>The witness should then ask the original owner the names of two bhikkhus or
+novices who are his friends or acquaintances:</p>
+<p>‘Ko te mitto vā sandiṭṭho vā.’<br />
+‘<em>Who is your friend or acquaintance?</em>‘</p>
+<p>After the original owner tells their names, e.g.,</p>
+<p>‘<em>Uttaro</em> bhikkhu ca <em>tisso</em> sāmaṇero ca.’<br />
+‘<em>Bhikkhu Uttaro and Sāmaṇera Tisso.</em>‘</p>
+<p>The witness then says:</p>
+<p>‘Ahaṃ tesaṃ dammi.’ ‘<em>I give it to them.</em>‘</p>
+<p>or</p>
+<p>‘Ahaṃ <em>uttarassa</em> bhikkhuno ca <em>tissassa</em> sāmaṇerassa dammi.’<br />
+‘<em>I give it to Bhikkhu Uttaro and Sāmaṇera Tisso.</em>‘</p>
+<p><em>Vin.IV.122</em></p>
+<p>To share a bowl: ‘cīvaraṃ’ → ‘pattaṃ’</p>
+<p>If more than one article is to be shared substitute the plural form as in <a href="#general-address">Generally Addressing</a> above.</p>
+<p>When the item is beyond forearm’s length substitute as in <a href="#general-address">Generally Addressing</a> above.</p>
+<h2><a class="header" href="#vikappana-paccuddharaṇa-relinquishing-shared-ownershipa-idvikappana-relinquishinga" id="vikappana-paccuddharaṇa-relinquishing-shared-ownershipa-idvikappana-relinquishinga">Vikappana-paccuddharaṇa (Relinquishing Shared Ownership)<a id="vikappana-relinquishing"></a></a></h2>
+<p>Before actually using the shared article, the other bhikkhu must relinquish his
+share.</p>
+<p>If the other bhikkhu is senior, and the article is within forearm’s length:</p>
+<p>‘Imaṃ cīvaraṃ mayhaṃ santakaṃ paribhuñja vā visajjehi vā yathāpaccayaṃ vā karohi.’<br />
+‘<em>This robe of mine: you may use it, give it away, or do as you wish with it.</em>’</p>
+<p><em>Kv.122</em></p>
+<p>When more than one robe is being relinquished:</p>
+<p>‘imaṃ cīvaraṃ’ → ‘imāni cīvarāni’<br />
+‘santakaṃ’ → ‘santakāni’</p>
+<p>When the second owner is junior:</p>
+<p>‘paribhuñja’ → ‘paribhuñjatha’<br />
+‘visajjehi’ → ‘visajjetha’<br />
+‘karohi’ → ‘karotha’</p>
+<p>If the articles are beyond forearm’s length, change case accordingly:</p>
+<p>‘imaṃ’ (this) → ‘etaṃ’ (that)<br />
+‘imāni’ (these) → ‘etāni’ (those)</p>
+<p>To rescind the shared ownership in the case when the <a href="#receiving-bhikkhu-absent">receiving bhikkhu is absent</a>, the witness says:</p>
+<p>‘Tesaṃ santakaṃ paribhuñja vā vissajjehi vā yathāpaccayaṃ vā karohi.’<br />
+‘<em>Use what is theirs, give it away or do as you like with it.</em>’</p>
+<p>To rescind the shared ownership of a bowl:<br />
+‘cīvaraṃ’ → ‘pattaṃ’</p>
+<p>and alter according to <a href="#general-address">Generally Addressing</a> above.</p>
+<p>The practice of some communities when sharing ownership of a bowl is that
+permission is not required before using it. However, if the first owner wishes
+to determine a shared bowl, the second owner should relinquish it first.</p>
 
                     </main>
 
