--- a/print.html
+++ b/print.html
@@ -2460,9 +2460,10 @@ Evaṃ sante labheyyāhaṃ<br />
 <p>The third introductory chant in the Mahānikāya sect is commonly <em>Sambuddhe</em>.
 In Dhammayut circles and frequently in the forest tradition, the third chant is
 <em>Yo cakkhumā</em> instead.</p>
+<!-- NOTE: don't include the Thai script in the ebooks, it crashes certain Kindles -->
 <p>There is a shorter and longer traditional core sequence. The <em>jet tamnaan</em>
-(เจ็ดตํานาน) contains D1-D7 as below, the <em>sipsong tamnaan</em>
-(สิบสองตํานาน) contains S1-S12. Chants that are not numbered ‘D’ or ‘S’ can
+contains D1-D7 as below, the <em>sipsong tamnaan</em>
+contains S1-S12. Chants that are not numbered ‘D’ or ‘S’ can
 be included or not, as wished, but should be recited in the order listed here.</p>
 <table><thead><tr><th></th><th>first line</th><th></th></tr></thead><tbody>
 <tr><td>i1</td><td><a href="chants/parittas.html#namo-tassa">Namo tassa</a></td><td></td></tr>
