--- a/chants/parittas.html
+++ b/chants/parittas.html
@@ -435,7 +435,9 @@ Pharitvāna mettaṃ samettā bhadantā<br />
 Avikkhitta-cittā parittaṃ bhaṇantu</p>
 <p><strong>C.</strong><br />
 Samantā cakka-vāḷesu<br />
-Atr’āgacchantu devatā</p>
+Atr’āgacchantu devatā<br />
+Saddhammaṃ muni-rājassa<br />
+Suṇantu sagga-mokkha-daṃ</p>
 <p><strong>D.</strong><br />
 Sagge kāme ca rūpe<br />
 Giri-sikhara-taṭe c’antalikkhe vimāne<br />
