--- a/print.html
+++ b/print.html
@@ -2589,7 +2589,9 @@ Pharitvāna mettaṃ samettā bhadantā<br />
 Avikkhitta-cittā parittaṃ bhaṇantu</p>
 <p><strong>C.</strong><br />
 Samantā cakka-vāḷesu<br />
-Atr’āgacchantu devatā</p>
+Atr’āgacchantu devatā<br />
+Saddhammaṃ muni-rājassa<br />
+Suṇantu sagga-mokkha-daṃ</p>
 <p><strong>D.</strong><br />
 Sagge kāme ca rūpe<br />
 Giri-sikhara-taṭe c’antalikkhe vimāne<br />
@@ -9349,18 +9351,17 @@ sleep.<br />
 <em>Vism. 59--83</em></p>
 <h2><a class="header" href="#the-ten-bases-of-merita-idthe-ten-bases-of-merita" id="the-ten-bases-of-merita-idthe-ten-bases-of-merita">The Ten Bases of Merit<a id="the-ten-bases-of-merit"></a></a></h2>
 <p><em>(Puññakiriyā-vatthu)</em></p>
-<p>(1) <em>Dānamaya:</em> meritorious action based in generosity, merit acquired
-by giving;</p>
-<p>(2) <em>Sīlamaya:</em> by observing the precepts or moral behaviour;</p>
-<p>(3) <em>Bhāvanāmaya:</em> by mental development or meditation;</p>
-<p>(4) <em>Apacāyanamaya:</em> by humility or reverence;</p>
-<p>(5) <em>Veyyāvaccamaya:</em> by rendering services;</p>
-<p>(6) <em>Pattidānamaya:</em> by sharing or giving out merit;</p>
-<p>(7) <em>Pattānumodanāmaya:</em> by rejoicing in others’ merit;</p>
-<p>(8) <em>Dhammassavanamaya:</em> by listening to the Doctrine or right teaching;</p>
-<p>(9) <em>Dhammadesanāmaya:</em> by teaching the Doctrine or showing truth;</p>
-<p>(10) <em>Diṭṭhujukamma:</em> by straightening one’s views or forming correct
-views.</p>
+<p>(1) <em>Dāna:</em> meritorious action based in generosity, merit acquired by giving;</p>
+<p>(2) <em>Sīla:</em> by observing the precepts or moral behaviour;</p>
+<p>(3) <em>Bhāvanā:</em> by mental development or meditation;</p>
+<p>(4) <em>Apacāyana:</em> by humility or reverence;</p>
+<p>(5) <em>Veyyāvacca:</em> by rendering services;</p>
+<p>(6) <em>Pattidāna:</em> by sharing or giving out merit;</p>
+<p>(7) <em>Pattānumodanā:</em> by rejoicing in others’ merit;</p>
+<p>(8) <em>Dhammassavana:</em> by listening to the Doctrine or right teaching;</p>
+<p>(9) <em>Dhammadesanā:</em> by teaching the Doctrine or showing truth;</p>
+<p>(10) <em>Diṭṭhujukamma:</em> by straightening one’s views or forming correct views.</p>
+<p><em>DhsA.157</em></p>
 <h2><a class="header" href="#the-root-of-all-thingsa-idthe-root-of-all-thingsa" id="the-root-of-all-thingsa-idthe-root-of-all-thingsa">The Root of All Things<a id="the-root-of-all-things"></a></a></h2>
 <p><em>Chandamūlakā:</em> Rooted in desire are all things.</p>
 <p><em>Manasikārasambhavā:</em> Born of attention are all things.</p>
