--- a/print.html
+++ b/print.html
@@ -9375,8 +9375,8 @@ sleep.<br />
 <p><em>Nibbānapariyosānā:</em> Terminating in Nibbāna are all things.</p>
 <p><em>A.V.106</em></p>
 <h1><a class="header" href="#print-guide" id="print-guide">Print Guide</a></h1>
-<p>PDF downloads.</p>
-<p>Instructions.</p>
+<p>Print specs and files: <a href="https://github.com/bhikkhu-manual/bhikkhu-manual-print">bhikkhu-manual-print</a></p>
+<p>Download the print files and covers: <a href="https://github.com/bhikkhu-manual/bhikkhu-manual-print/archive/master.zip">ZIP archive</a></p>
 <h1><a class="header" href="#copyright" id="copyright">Copyright</a></h1>
 <p>Bhikkhu Manual<br />
 All Chants with English Translations and Vinaya Notes<br />
