--- a/print-guide.html
+++ b/print-guide.html
@@ -151,8 +151,8 @@
                 <div id="content" class="content">
                     <main>
                         <h1><a class="header" href="#print-guide" id="print-guide">Print Guide</a></h1>
-<p>PDF downloads.</p>
-<p>Instructions.</p>
+<p>Print specs and files: <a href="https://github.com/bhikkhu-manual/bhikkhu-manual-print">bhikkhu-manual-print</a></p>
+<p>Download the print files and covers: <a href="https://github.com/bhikkhu-manual/bhikkhu-manual-print/archive/master.zip">ZIP archive</a></p>
 
                     </main>
 
