--- a/print.html
+++ b/print.html
@@ -157,6 +157,9 @@
   <h1><a class="header" href="#bhikkhu-manual" id="bhikkhu-manual">Bhikkhu Manual</a></h1>
   <a href="https://bhikkhu-manual.github.io">bhikkhu-manual.github.io</a>
 </div>
+<div>
+  <p><em>Last updated on: 2020-10-28</em></p>
+</div>
 <h2><a class="header" href="#downlads" id="downlads">Downlads</a></h2>
 <p><em>(NOTE: See the <a href="./print-guide.html">Print Guide</a> for press-quality print files and guidelines.)</em></p>
 <div class="grid download-item">
@@ -8319,7 +8322,7 @@ bhagavā</em>...), and ‘Preliminary Homage’ (<em>Namo tassa</em>).</p>
 <em>Kaṭhina-cloth</em> to a particular bhikkhu (see <a href="vinaya/rains-and-kathina.html#kathina-sanghakamma">Kaṭhina Saṅghakamma</a>).</p>
 <p>The bhikkhu receiving the robe, in front of everyone, relinquishes the robe he
 will replace, usually the <em>antaravāsaka</em>. He marks the robe he has received
-with a <em>bindu</em>.</p>
+with a <em>bindu</em>, either when receiving it, or after having changed into it, before determining it.</p>
 <p>He leaves the room and changes into the new robe. He returns to the
 gathered bhikkhus, determines the new robe and completes the <em>Kaṭhina</em> by
 chanting <em>Spreading the Kaṭhina</em> (see <a href="vinaya/rains-and-kathina.html#spreading-the-kathina">Spreading the Kaṭhina</a>).</p>
