--- a/titlepage.html
+++ b/titlepage.html
@@ -155,6 +155,9 @@
   <h1><a class="header" href="#bhikkhu-manual" id="bhikkhu-manual">Bhikkhu Manual</a></h1>
   <a href="https://bhikkhu-manual.github.io">bhikkhu-manual.github.io</a>
 </div>
+<div>
+  <p><em>Last updated on: 2020-10-28</em></p>
+</div>
 <h2><a class="header" href="#downlads" id="downlads">Downlads</a></h2>
 <p><em>(NOTE: See the <a href="./print-guide.html">Print Guide</a> for press-quality print files and guidelines.)</em></p>
 <div class="grid download-item">
