--- a/vinaya/rains-and-kathina.html
+++ b/vinaya/rains-and-kathina.html
@@ -400,7 +400,7 @@ bhagavā</em>...), and ‘Preliminary Homage’ (<em>Namo tassa</em>).</p>
 <em>Kaṭhina-cloth</em> to a particular bhikkhu (see <a href="#kathina-sanghakamma">Kaṭhina Saṅghakamma</a>).</p>
 <p>The bhikkhu receiving the robe, in front of everyone, relinquishes the robe he
 will replace, usually the <em>antaravāsaka</em>. He marks the robe he has received
-with a <em>bindu</em>.</p>
+with a <em>bindu</em>, either when receiving it, or after having changed into it, before determining it.</p>
 <p>He leaves the room and changes into the new robe. He returns to the
 gathered bhikkhus, determines the new robe and completes the <em>Kaṭhina</em> by
 chanting <em>Spreading the Kaṭhina</em> (see <a href="#spreading-the-kathina">Spreading the Kaṭhina</a>).</p>
